--- a/install-scripts/4-server/files/lys-avnav.conf
+++ b/install-scripts/4-server/files/lys-avnav.conf
@@ -1,6 +1,7 @@
 #Overrides for the avnav service
 [Service]
 User=user
+PrivateTmp=yes
 ExecStartPre=sh -c 'chown -R user:user /home/user/avnav/data || true'
 ExecStart=
 ExecStart=/usr/bin/avnav -q -b /home/user/avnav/data -t /usr/lib/avnav/lysmarine/avnav_server_lysmarine.xml
