--- a/install-scripts/6-desktop/files/settings.ini
+++ b/install-scripts/6-desktop/files/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Adapta-Nokto
-gtk-icon-theme-name=Abyss-DEEP-Suru-GLOW
+gtk-theme-name=Natura
+gtk-icon-theme-name=gnome
 gtk-font-name=Sans 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
