--- a/install-scripts/8-apps/files/term-weather.desktop
+++ b/install-scripts/8-apps/files/term-weather.desktop
@@ -6,5 +6,5 @@ Exec=lxterminal -e 'curl wttr.in; read -p "Press any key..."'
 Icon=gnome-globe
 Terminal=false
 Type=Application
-Categories=WWW;Internet
+Categories=Internet
 Keywords=weather
