if [ "$BBN_KIND" == "LIGHT" ] ; then   exit 0 fi

--- a/install-scripts/6-desktop/files/XyGrib.desktop
+++ b/install-scripts/6-desktop/files/XyGrib.desktop
@@ -8,7 +8,7 @@ Name=XyGrib
 Comment=GRIB Weather File Viewer
 Comment[fr]=Visualisation de données météo au format GRIB
 Terminal=false
-Categories=Education
+Categories=Navigation;
 Icon=logo_grib
 Exec=XyGrib
 Name[fr_FR]=XyGrib
