--- a/install-scripts/6-desktop/files/avnav.desktop
+++ b/install-scripts/6-desktop/files/avnav.desktop
@@ -6,5 +6,5 @@ Comment=AvNav ChartPlotter
 Exec=sh -c "/opt/AvNav/AvNav"
 Terminal=false
 Icon=gnome-globe
-Categories=System;GPS;Geography;Navigation;Chart;
+Categories=Navigation;
 Keywords=GPS;Navigation;Chart;
