--- a/install-scripts/6-desktop/files/opencpn.desktop
+++ b/install-scripts/6-desktop/files/opencpn.desktop
@@ -6,5 +6,5 @@ Exec=bash -c 'cd /usr/bin; onlyone /usr/bin/opencpn -l=error'
 Icon=opencpn
 Terminal=false
 Type=Application
-Categories=System;GPS;Geography;Navigation;Chart;
+Categories=Navigation;
 Keywords=GPS;Navigation;Chart;
