--- a/install-scripts/6-desktop/files/skwiz.desktop
+++ b/install-scripts/6-desktop/files/skwiz.desktop
@@ -4,4 +4,4 @@ Name=SkWiz Instruments
 Exec=/opt/skwiz/skwiz
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System
+Categories=Navigation;
