--- a/install-scripts/6-desktop/files/tuktuk.desktop
+++ b/install-scripts/6-desktop/files/tuktuk.desktop
@@ -4,4 +4,4 @@ Name=TukTuk Chartplotter
 Exec=/opt/tuktuk/tuktuk
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System;Navigation;Chart;
+Categories=Navigation;
