--- a/install-scripts/6-desktop/files/Freeboard-sk.desktop
+++ b/install-scripts/6-desktop/files/Freeboard-sk.desktop
@@ -4,4 +4,4 @@ Name=Freeboard-sk Chartplotter
 Exec=/opt/Freeboard-sk/Freeboard-sk
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System;Navigation;Chart;
+Categories=Navigation;
