--- a/install-scripts/6-desktop/files/instrumentpanel.desktop
+++ b/install-scripts/6-desktop/files/instrumentpanel.desktop
@@ -4,4 +4,4 @@ Name=Instrument Panel
 Exec=/opt/instrumentpanel/instrumentpanel
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System
+Categories=Navigation;
