--- a/install-scripts/6-desktop/files/kip-dash.desktop
+++ b/install-scripts/6-desktop/files/kip-dash.desktop
@@ -4,4 +4,4 @@ Name=KIP Dashboard
 Exec=/opt/kip-dash/kip-dash
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System
+Categories=Navigation;
