--- a/install-scripts/6-desktop/files/pypilot_webapp.desktop
+++ b/install-scripts/6-desktop/files/pypilot_webapp.desktop
@@ -4,4 +4,4 @@ Name=Pypilot Webapp
 Exec=/opt/Pypilot_webapp/Pypilot_webapp
 Terminal=false
 Icon=go-jump
-Categories=Utility
+Categories=Navigation;
