--- a/install-scripts/6-desktop/files/sailgauge.desktop
+++ b/install-scripts/6-desktop/files/sailgauge.desktop
@@ -4,4 +4,4 @@ Name=Sail Gauge
 Exec=/opt/sailgauge/sailgauge
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System
+Categories=Navigation;
