--- a/install-scripts/6-desktop/files/signalk.desktop
+++ b/install-scripts/6-desktop/files/signalk.desktop
@@ -4,4 +4,4 @@ Name=SignalK Marine Data Server
 Exec=/opt/SignalK/SignalK
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System
+Categories=Navigation;
