--- a/install-scripts/6-desktop/files/sk-autopilot.desktop
+++ b/install-scripts/6-desktop/files/sk-autopilot.desktop
@@ -4,4 +4,4 @@ Name=Autopilot Remote
 Exec=/opt/sk-autopilot/sk-autopilot
 Terminal=false
 Icon=/home/user/.local/share/icons/signalk.png
-Categories=System;Navigation;Chart;
+Categories=Navigation;
