--- a/install-scripts/8-apps/files/previsat.desktop
+++ b/install-scripts/8-apps/files/previsat.desktop
@@ -6,5 +6,5 @@ Comment=Previsat Satellite Tracker
 Exec=previsat
 Icon=gnome-globe
 Terminal=false
-Categories=Astronomy;HamRadio
+Categories=HamRadio;
 Keywords=Astronomy;HamRadio
