--- a/install-scripts/8-apps/files/propagation.desktop
+++ b/install-scripts/8-apps/files/propagation.desktop
@@ -6,5 +6,5 @@ Comment=HF Propagation
 Exec=gnome-www-browser /usr/local/share/hf-propagation/propagation.html
 Terminal=false
 Icon=accessories-dictionary
-Categories=HamRadio
+Categories=HamRadio;
 Keywords=HamRadio
