--- a/install-scripts/6-desktop/files/firstRun.service
+++ b/install-scripts/6-desktop/files/firstRun.service
@@ -4,7 +4,7 @@ ExecStart=/usr/local/sbin/firstrun
 User=root
 
 [Unit]
-Before=graphical.target
+Before=lightdm.service
 
 [Install]
 WantedBy=multi-user.target
