--- a/install-scripts/8-apps/files/bbn-checklist.desktop
+++ b/install-scripts/8-apps/files/bbn-checklist.desktop
@@ -6,5 +6,5 @@ Comment=Cruise Checklist
 Exec=gnome-www-browser /usr/local/share/bbn-checklist/bbn-checklist.html
 Terminal=false
 Icon=document
-Categories=Utilities
-Keywords=Utilities
+Categories=Utility
+Keywords=Utility
