--- a/install-scripts/8-apps/files/colreg.desktop
+++ b/install-scripts/8-apps/files/colreg.desktop
@@ -6,5 +6,5 @@ Comment=Collision Regulations
 Exec=gnome-www-browser /usr/local/share/colreg/colreg.pdf
 Terminal=false
 Icon=document
-Categories=Utilities
-Keywords=Utilities
+Categories=Utility
+Keywords=Utility
