--- a/install-scripts/8-apps/files/hamfax.desktop
+++ b/install-scripts/8-apps/files/hamfax.desktop
@@ -8,4 +8,4 @@ Icon=phone
 Comment=Send and receive radio facsimiles
 Comment[de]=Senden und Empfangen von Radio-Faksimile-Sendungen
 Exec=hamfax
-Categories=AudioVideo;Audio;HamRadio;Qt
+Categories=Radio
