--- a/install-scripts/8-apps/files/quisk.desktop
+++ b/install-scripts/8-apps/files/quisk.desktop
@@ -6,5 +6,5 @@ Comment=Quisk SDR
 Exec=sh -c "python3 -m quisk"
 Terminal=false
 Icon=radio
-Categories=HamRadio;Radio
+Categories=Radio
 Keywords=HamRadio;Radio
