--- a/install-scripts/8-apps/files/jnx.desktop
+++ b/install-scripts/8-apps/files/jnx.desktop
@@ -6,5 +6,5 @@ Comment=JNX NavTex Decoder
 Exec=sh -c "cd /usr/local/share/jnx; java -jar JNX.jar"
 Terminal=false
 Icon=radio
-Categories=HamRadio;Radio;Weather
+Categories=Radio;Weather
 Keywords=HamRadio;Radio;Weather
