--- a/install-scripts/8-apps/files/jwx.desktop
+++ b/install-scripts/8-apps/files/jwx.desktop
@@ -6,5 +6,5 @@ Comment=JWX WeatherFax Decoder
 Exec=sh -c "cd /usr/local/share/jwx; java -jar JWX.jar"
 Terminal=false
 Icon=radio
-Categories=HamRadio;Radio;Weather
+Categories=Radio;Weather
 Keywords=HamRadio;Radio;Weather
