--- a/install-scripts/8-apps/files/marine-life.desktop
+++ b/install-scripts/8-apps/files/marine-life.desktop
@@ -6,5 +6,5 @@ Comment=Marine Life
 Exec=gnome-www-browser /usr/local/share/marine-life/marine-life-id.html
 Terminal=false
 Icon=accessories-dictionary
-Categories=Utilities
+Categories=Network
 Keywords=Utilities
