--- a/install-scripts/8-apps/files/knots.desktop
+++ b/install-scripts/8-apps/files/knots.desktop
@@ -6,5 +6,5 @@ Comment=Knots
 Exec=gnome-www-browser /usr/local/share/knots/knots.html
 Terminal=false
 Icon=document
-Categories=Utilities
+Categories=Utility
 Keywords=Utilities
