--- a/install-scripts/4-server/files/pypilot_calibration.desktop
+++ b/install-scripts/4-server/files/pypilot_calibration.desktop
@@ -4,4 +4,4 @@ Name=Pypilot Calibration
 Exec=onlyone pypilot_calibration
 Terminal=false
 Icon=go-jump
-Categories=Settings
+Categories=X-GNOME-Utilities;
