--- a/install-scripts/8-apps/files/noaa-apt.desktop
+++ b/install-scripts/8-apps/files/noaa-apt.desktop
@@ -3,7 +3,7 @@ Name=NOAA-APT Satellite Weather
 GenericName=Image decoder for APT signals from NOAA satellites
 Comment=NOAA-APT Satellite Weather
 Exec=bash -c "cd /usr/local/share/noaa-apt; noaa-apt"
-Icon=noaa-apt
+Icon=ar.com.mbernardi.noaa-apt
 Terminal=false
 Type=Application
 Categories=Radio
