--- a/install-scripts/4-server/files/gpsd.conf
+++ b/install-scripts/4-server/files/gpsd.conf
@@ -1,6 +1,7 @@
 # Devices gpsd should collect to at boot time.
 # They need to be read/writeable, either by user gpsd or the group dialout.
 DEVICES=""
+#DEVICES="/dev/ttyLYS_gps_0"
 
 # Other options you want to pass to gpsd
 GPSD_OPTIONS="-p"
