--- a/install-scripts/4-server/files/shairport-sync.conf
+++ b/install-scripts/4-server/files/shairport-sync.conf
@@ -6,6 +6,7 @@
 // General Settings
 general =
 {
+    output_backend = "pa";
 //	name = "%H"; // This means "Hostname" -- see below. This is the name the service will advertise to iTunes.
 //		The default is "Hostname" -- i.e. the machine's hostname with the first letter capitalised (ASCII only.)
 //		You can use the following substitutions:
