preparing for first BBN OS bookworm LITE release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,4 +75,4 @@ workflows:
   build_all:
     jobs:
       - build-lite-raspbian-bookworm-arm64
-      - build-full-raspbian-bookworm-arm64
+#      - build-full-raspbian-bookworm-arm64
