--- a/install-scripts/6-desktop/files/boatinstrument.desktop
+++ b/install-scripts/6-desktop/files/boatinstrument.desktop
@@ -3,7 +3,7 @@ Name=BoatInstrument
 GenericName=BoatInstrument Application
 Comment=BoatInstrument
 Path=/home/user/boatinstrument
-Exec=/home/user/boatinstrument/boatinstrument
+Exec=onlyone ./boatinstrument
 Icon=gnome-globe
 StartupNotify=true
 Terminal=false
