--- a/install-scripts/6-desktop/files/boatinstrument.desktop
+++ b/install-scripts/6-desktop/files/boatinstrument.desktop
@@ -4,7 +4,7 @@ GenericName=BoatInstrument Application
 Comment=BoatInstrument
 Path=/home/user/boatinstrument
 Exec=onlyone ./boatinstrument
-Icon=gnome-globe
+Icon=power-profile-balanced-symbolic
 StartupNotify=true
 Terminal=false
 Type=Application
