added connection to bbn wave sensor

--- a/install-scripts/4-server/files/settings.json
+++ b/install-scripts/4-server/files/settings.json
@@ -304,6 +304,25 @@
       ],
       "id": "OpenCPN",
       "enabled": true
+    },
+    {
+      "pipeElements": [
+        {
+          "type": "providers/simple",
+          "options": {
+            "logging": false,
+            "type": "NMEA0183",
+            "subOptions": {
+              "validateChecksum": true,
+              "type": "serial",
+              "device": "/dev/ttyACM1",
+              "baudrate": 115200
+            }
+          }
+        }
+      ],
+      "id": "bbn_wave_sensor",
+      "enabled": false
     }
   ],
   "security": {
