bbn heave sensor

--- a/install-scripts/4-server/files/settings.json
+++ b/install-scripts/4-server/files/settings.json
@@ -321,7 +321,7 @@
           }
         }
       ],
-      "id": "bbn_wave_sensor",
+      "id": "bbn_heave_sensor",
       "enabled": false
     }
   ],
