--- a/install-scripts/4-server/files/settings.json
+++ b/install-scripts/4-server/files/settings.json
@@ -321,6 +321,25 @@
           }
         }
       ],
+      "id": "bbn_sensor_hub",
+      "enabled": false
+    },
+    {
+      "pipeElements": [
+        {
+          "type": "providers/simple",
+          "options": {
+            "logging": false,
+            "type": "NMEA0183",
+            "subOptions": {
+              "validateChecksum": true,
+              "type": "serial",
+              "device": "/dev/ttyACM1",
+              "baudrate": 115200
+            }
+          }
+        }
+      ],
       "id": "bbn_heave_sensor",
       "enabled": false
     }
